선생님 풀이 추가

--- a/03.프로그래밍입문/05.실습문제.ipynb
+++ b/03.프로그래밍입문/05.실습문제.ipynb
@@ -59,7 +59,18 @@
    "execution_count": null,
    "id": "ac64c368",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이름 - 유미\n",
+      "레벨 - 6\n",
+      "체력 - 950\n",
+      "대사 - 나랑 유미랑!\n"
+     ]
+    }
+   ],
    "source": [
     "# 선생님이 하신 정답\n",
     "champ_name = \"유미\"\n",
@@ -67,10 +78,10 @@
     "champ_hp = 950\n",
     "champ_msg = \"나랑 유미랑!\"\n",
     "\n",
-    "print(\"이름 -\" + champ_name)\n",
-    "print(\"레벨 -\" + str(champ_level))  # 자료형 변환\n",
-    "print(\"체력 -\" + str(champ_hp))\n",
-    "print(\"대사 -\" + champ_msg)"
+    "print(\"이름 - \" + champ_name)\n",
+    "print(\"레벨 - \" + str(champ_level))  # 문자열+숫자형이기 때문에 자료형 변환\n",
+    "print(\"체력 - \" + str(champ_hp))\n",
+    "print(\"대사 - \" + champ_msg)"
    ]
   },
   {
@@ -106,6 +117,28 @@
     "a = input()\n",
     "\n",
     "print(\"받아라 몬스터볼~!\",a,\"넌 내꺼야!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1ff77c71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "받아라 몬스터볼~! 파이리 넌 내꺼야!\n",
+      "받아라 몬스터볼~! 파이리 넌 내꺼야!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 선생님이 하신 정답\n",
+    "pokemon_name = input()\n",
+    "print(\"받아라 몬스터볼~!\",pokemon_name,\"넌 내꺼야!\")\n",
+    "print(f\"받아라 몬스터볼~! {pokemon_name} 넌 내꺼야!\")   # f-string: 문자열과 변수를 합쳐서 새로운 문자열을 만들고 싶을 때 사용한다."
    ]
   },
   {
@@ -153,11 +186,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "582aa87b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[포켓몬 정보]\n",
+      "이름 : 이상해씨\n",
+      "레벨 : 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 선생님이 하신 정답\n",
+    "pokemon_name = input(\"포켓몬 이름을 입력하세요:\")\n",
+    "pokemon_level = input(\"레벨을 입력하세요:\")\n",
+    "\n",
+    "print(\"[포켓몬 정보]\")\n",
+    "print(f\"이름 : {pokemon_name}\")\n",
+    "print(f\"레벨 : {pokemon_level}\")"
+   ]
   }
  ],
  "metadata": {
